--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "ecommerce",
-  "homepage": "https://ahmedtarek536.github.io/Ecommerce-App/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "server": "json-server --watch data.json --port 8000"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1",
+    "json-server": "^1.0.0-beta.1",
     "vite": "^5.2.11"
   }
 }
